add more petals, ghost of import prompt

--- a/website/index.html
+++ b/website/index.html
@@ -150,7 +150,7 @@
     </style>
 </head>
 
-<body>
+<body style="background-image: url('https://media.istockphoto.com/videos/petals-sakura-cherry-blossom-falling-on-black-background-looped-video-id925176466?s=640x640');">
     <div id="beepboxEditorContainer">
         <noscript>
             Sorry, JummBox requires a JavaScript-enabled browser.
