Jummbox to Weebbox

--- a/website/index.html
+++ b/website/index.html
@@ -10,11 +10,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JummBox</title>
-    <meta name="application-name" content="JummBox" />
+    <title>WeebBox</title>
+    <meta name="application-name" content="WeebBox" />
     <meta name="apple-mobile-web-app-title" content="JummBox">
-    <meta name="description" content="JummBox is an online tool for sketching and sharing instrumental melodies." />
-    <meta name="keywords" content="chiptune, instrumental, music, song, melody, composition, tool, free, square wave, NES, NSF, JummBox, jummbox, BeepBox, beepbox" />
+    <meta name="description" content="WeebBox is an online tool for sketching and sharing instrumental melodies." />
+    <meta name="keywords" content="chiptune, instrumental, music, song, melody, composition, tool, free, square wave, NES, NSF, WeebBox, JummBox, BeepBox, beepbox" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -153,23 +153,23 @@
 <body style="background-image: url('https://media.istockphoto.com/videos/petals-sakura-cherry-blossom-falling-on-black-background-looped-video-id925176466?s=640x640');">
     <div id="beepboxEditorContainer">
         <noscript>
-            Sorry, JummBox requires a JavaScript-enabled browser.
+            Sorry, WeebBox requires a JavaScript-enabled browser.
         </noscript>
     </div>
     <div id="text-content">
         <section>
 
             <h1>
-                <font color="#9c64f7">JummBox</font>
+                <font color="#9c64f7">WeebBox</font>
                 <span id="jummboxPlant" style="display: inline; color:#62a13b"></span>
             </h1>
             
             <p id="introduction">
-                This is an online tool for sketching and sharing chiptune melodies.<br>
-                It is a modification of the <a href="https://www.beepbox.co/">original BeepBox</a> by John Nesky.
+                This is an online tool for sketching and sharing chiptune melodies alongside your favorite waifus.<br>
+                It is a small modification of <a href="https://jummbus.bitbucket.io">JummBox</a>, which is a modification of the <a href="https://www.beepbox.co/">original BeepBox</a> by John Nesky.
             </p>
             <p>
-                If you're familiar with BeepBox and just want to learn what JummBox does differently, check out this <a href="https://youtu.be/26yDP4ACuzE">overview video</a>.
+                If you're familiar with BeepBox and just want to learn what WeebBox does differently, check out this <a href="https://youtu.be/26yDP4ACuzE">overview video</a>.
                 You can also find the latest patch notes <a href="https://jummbus.bitbucket.io/patch_notes/2.3.html">here</a>.
             </p>
             <p>
